# milkvideo

./: .cursorrules  .gitignore  .sourcery.yaml  LICENSE  QUICK_DOWNLOAD_COMPLETED.md  README.md  install.sh  install_global.sh  mkdocs.yaml  pyproject.toml  remove_emojis.py  requirements.txt  sample_batch.txt  setup.py  vmx
.cursor/rules/: python.mdc
.kiro/steering/: python.md
config/: default_config.json
docs/: IMPROVEMENTS_SUMMARY.md  README.md  TODO.md  api-reference.md  api.md  directory-structure.md  index.md  installation.md  project-architecture.md  quick-download.md  user-guide.md
docs/prompts/: sandbag.md
prompt-req/: error-correction.md  settings-json-refactoring.md  settingsjson.md
scripts/: setup_project.py
src/: code-errors.json
src/videomilker/: .cursorrules  __init__.py  main.py  version.py
src/videomilker/cli/: __init__.py  input_handler.py  menu_renderer.py  menu_system.py  styles.py
src/videomilker/config/: config_manager.py  defaults.py  settings.py
src/videomilker/core/: batch_processor.py  downloader.py  file_manager.py  progress_tracker.py
src/videomilker/exceptions/: __init__.py  config_errors.py  download_errors.py  validation_errors.py
src/videomilker/history/: __init__.py  history_manager.py
src/videomilker/utils/: extract_export_duplicates.py
tests/: conftest.py  test_auto_download.py  test_batch_functionality.py  test_clear_history.py  test_downloader_progress.py  test_enhanced_menu_system.py  test_videomilker.py
tests/test_cli/: __init__.py
